manifest/index-a/web-a-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-a-deployment
  labels:
    app: web-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-a
  template:
    metadata:
      labels:
        app: web-a
    spec:
      containers:
      - name: web-a
        image: yxyj1919/ingress-demo-a
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-a
  name: web-a-svc
spec:
  selector:
    app: web-a
  ports:
    - name: http
      protocol: TCP
      port: 80
  sessionAffinity: None
  type: ClusterIP
