manifest/index-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: web.mydomain.com
    http:
      paths:
      - path: /index-a.html
        pathType: Prefix
        backend:
          service:
            name: web-a-svc
            port:
              number: 80
      - path: /index-b.html
        pathType: Prefix
        backend:
          service:
            name: web-b-svc
            port:
              number: 80
